k8s/niveau2/L7-netpol.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: echo-allow-from-ingress-l7
  namespace: demo
spec:
  endpointSelector:
    matchLabels:
      app: echo
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: ingress-nginx
        k8s:app.kubernetes.io/name: ingress-nginx
        k8s:app.kubernetes.io/component: controller
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "^/.*"     # GET sur tous les chemins
